# airwindows

./: .gitignore  Airwindopedia.txt  what.txt
plugins/LinuxVST/: CMakeLists.txt  Helpers.cmake  LICENSE  README.md
plugins/LinuxVST/include/vstsdk/: CMakeLists.txt
plugins/LinuxVST/src/ADClip7/: ADClip7.cpp  ADClip7.h  ADClip7Proc.cpp
plugins/LinuxVST/src/ADClip8/: ADClip8.cpp  ADClip8Proc.cpp
plugins/LinuxVST/src/ADClip9/: ADClip9Proc.cpp
plugins/LinuxVST/src/ADT/: ADT.cpp  ADT.h  ADTProc.cpp
plugins/LinuxVST/src/AQuickVoiceClip/: AQuickVoiceClip.cpp  AQuickVoiceClipProc.cpp
plugins/LinuxVST/src/Acceleration/: Acceleration.cpp  Acceleration.h  AccelerationProc.cpp
plugins/LinuxVST/src/Acceleration2/: Acceleration2Proc.cpp
plugins/LinuxVST/src/Air/: Air.h
plugins/LinuxVST/src/Air2/: Air2.cpp  Air2Proc.cpp
plugins/LinuxVST/src/Air3/: Air3Proc.cpp
plugins/LinuxVST/src/Air4/: Air4.h
plugins/LinuxVST/src/AngleEQ/: AngleEQ.cpp  AngleEQ.h
plugins/LinuxVST/src/Apicolypse/: Apicolypse.h  ApicolypseProc.cpp
plugins/LinuxVST/src/AtmosphereBuss/: AtmosphereBuss.h  AtmosphereBussProc.cpp
plugins/LinuxVST/src/AtmosphereChannel/: AtmosphereChannelProc.cpp
plugins/LinuxVST/src/Aura/: AuraProc.cpp
plugins/LinuxVST/src/AverMatrix/: AverMatrix.cpp  AverMatrixProc.cpp
plugins/LinuxVST/src/Average/: Average.h  AverageProc.cpp
plugins/LinuxVST/src/BassAmp/: BassAmpProc.cpp
plugins/LinuxVST/src/BassDrive/: BassDrive.cpp  BassDriveProc.cpp
plugins/LinuxVST/src/BassKit/: BassKit.cpp  BassKit.h
plugins/LinuxVST/src/Baxandall/: Baxandall.h  BaxandallProc.cpp
plugins/LinuxVST/src/Baxandall3/: Baxandall3.cpp
plugins/LinuxVST/src/Beam/: Beam.cpp  Beam.h  BeamProc.cpp
plugins/LinuxVST/src/BezEQ/: BezEQ.h
plugins/LinuxVST/src/BezEQ4/: BezEQ4Proc.cpp
plugins/LinuxVST/src/BeziComp/: CMakeCache.txt
plugins/LinuxVST/src/BigAmp/: BigAmp.h
plugins/LinuxVST/src/Biquad/: Biquad.h  BiquadProc.cpp
plugins/LinuxVST/src/BiquadDouble/: BiquadDouble.cpp  BiquadDouble.h
plugins/LinuxVST/src/BiquadNonLin/: BiquadNonLin.cpp
plugins/LinuxVST/src/BiquadOneHalf/: BiquadOneHalf.cpp  BiquadOneHalf.h  BiquadOneHalfProc.cpp
plugins/LinuxVST/src/BiquadPlus/: BiquadPlusProc.cpp
plugins/LinuxVST/src/BiquadTriple/: BiquadTriple.h  BiquadTripleProc.cpp
plugins/LinuxVST/src/BitGlitter/: BitGlitter.cpp  BitGlitter.h  BitGlitterProc.cpp
plugins/LinuxVST/src/BitShiftGain/: BitShiftGain.h
plugins/LinuxVST/src/Bite/: Bite.cpp
plugins/LinuxVST/src/BlockParty/: BlockParty.cpp  BlockParty.h  BlockPartyProc.cpp
plugins/LinuxVST/src/BrassRider/: BrassRider.cpp  BrassRider.h  BrassRiderProc.cpp
plugins/LinuxVST/src/BrightAmbience/: BrightAmbience.h  BrightAmbienceProc.cpp
plugins/LinuxVST/src/BrightAmbience2/: BrightAmbience2.h  BrightAmbience2Proc.cpp  VSTProject.vcxproj
plugins/LinuxVST/src/BrightAmbience3/: BrightAmbience3Proc.cpp
plugins/LinuxVST/src/BuildATPDF/: BuildATPDF.cpp  BuildATPDF.h  BuildATPDFProc.cpp
plugins/LinuxVST/src/BussColors4/: BussColors4Proc.cpp
plugins/LinuxVST/src/ButterComp/: ButterComp.h
plugins/LinuxVST/src/ButterComp2/: ButterComp2.h  ButterComp2Proc.cpp
plugins/LinuxVST/src/C5RawChannel/: C5RawChannel.h  C5RawChannelProc.cpp
plugins/LinuxVST/src/CStrip/: CStripProc.cpp
plugins/LinuxVST/src/Cabs/: Cabs.cpp  CabsProc.cpp
plugins/LinuxVST/src/Cabs2/: Cabs2.cpp
plugins/LinuxVST/src/Calibre/: Calibre.cpp  Calibre.h  CalibreProc.cpp
plugins/LinuxVST/src/Cans/: Cans.h
plugins/LinuxVST/src/CansAW/: CansAW.cpp  CansAW.h
plugins/LinuxVST/src/Capacitor/: CapacitorProc.cpp
plugins/LinuxVST/src/Capacitor2/: Capacitor2.h  Capacitor2Proc.cpp
plugins/LinuxVST/src/Chamber/: ChamberProc.cpp
plugins/LinuxVST/src/Chamber2/: Chamber2.cpp  Chamber2.h  Chamber2Proc.cpp
plugins/LinuxVST/src/Channel4/: Channel4.cpp  Channel4.h
plugins/LinuxVST/src/Channel5/: Channel5.h  Channel5Proc.cpp
plugins/LinuxVST/src/Channel6/: Channel6.cpp  Channel6.h  Channel6Proc.cpp
plugins/LinuxVST/src/Channel7/: Channel7Proc.cpp
plugins/LinuxVST/src/Channel8/: Channel8.cpp  Channel8.h  Channel8Proc.cpp  VSTProject.vcxproj.filters
plugins/LinuxVST/src/Channel9/: Channel9.cpp  Channel9.h  Channel9Proc.cpp
plugins/LinuxVST/src/ChimeyDeluxe/: ChimeyDeluxe.cpp  ChimeyDeluxe.h  ChimeyDeluxeProc.cpp
plugins/LinuxVST/src/ChimeyGuitar/: ChimeyGuitar.cpp
plugins/LinuxVST/src/Chorus/: Chorus.cpp  Chorus.h
plugins/LinuxVST/src/ChorusEnsemble/: ChorusEnsemble.cpp  ChorusEnsemble.h  ChorusEnsembleProc.cpp
plugins/LinuxVST/src/ChromeOxide/: ChromeOxide.h  ChromeOxideProc.cpp
plugins/LinuxVST/src/Cider/: CiderProc.cpp
plugins/LinuxVST/src/ClipOnly2/: ClipOnly2.cpp  ClipOnly2Proc.cpp
plugins/LinuxVST/src/Coils/: Coils.cpp  Coils.h  CoilsProc.cpp
plugins/LinuxVST/src/Coils2/: Coils2.h
plugins/LinuxVST/src/Cojones/: Cojones.h
plugins/LinuxVST/src/Compresaturator/: Compresaturator.cpp  CompresaturatorProc.cpp
plugins/LinuxVST/src/Console0Buss/: Console0Buss.cpp  Console0Buss.h  Console0BussProc.cpp
plugins/LinuxVST/src/Console4Buss/: Console4Buss.h  Console4BussProc.cpp
plugins/LinuxVST/src/Console4Channel/: Console4ChannelProc.cpp
plugins/LinuxVST/src/Console5Buss/: Console5Buss.h
plugins/LinuxVST/src/Console5Channel/: Console5Channel.cpp  Console5Channel.h  Console5ChannelProc.cpp
plugins/LinuxVST/src/Console5DarkCh/: Console5DarkCh.cpp
plugins/LinuxVST/src/Console6Buss/: Console6Buss.cpp  Console6Buss.h  Console6BussProc.cpp
plugins/LinuxVST/src/Console7Cascade/: Console7Cascade.h  Console7CascadeProc.cpp
plugins/LinuxVST/src/Console7Channel/: Console7Channel.cpp  Console7Channel.h
plugins/LinuxVST/src/Console7Crunch/: Console7Crunch.cpp
plugins/LinuxVST/src/Console8BusOut/: Console8BussOutProc.cpp
plugins/LinuxVST/src/Console8BussHype/: Console8BussHype.cpp  Console8BussHypeProc.cpp
plugins/LinuxVST/src/Console8BussIn/: Console8BussIn.h
plugins/LinuxVST/src/Console8BussOut/: Console8BussOut.cpp
plugins/LinuxVST/src/Console8ChannelHype/: Console8ChannelHype.h  Console8ChannelHypeProc.cpp
(+18209 files in other folders)
