cmake_minimum_required(VERSION 3.9)
project(airwindows_ports)

set(CMAKE_CXX_STANDARD 14)
add_compile_options(-O2 -D__cdecl=)

include(Helpers.cmake)

add_subdirectory(include/vstsdk)
add_airwindows_plugin(Acceleration)
add_airwindows_plugin(AtmosphereBuss)
add_airwindows_plugin(AtmophereChannel)
add_airwindows_plugin(Aura)
add_airwindows_plugin(BitGlitter)
add_airwindows_plugin(BitShiftGain)
add_airwindows_plugin(BuildATPDF)
add_airwindows_plugin(ButterComp)
add_airwindows_plugin(ButterComp2)
add_airwindows_plugin(C5RawBuss)
add_airwindows_plugin(C5RawChannel)
add_airwindows_plugin(Channel4)
add_airwindows_plugin(Channel5)
add_airwindows_plugin(Channel6)
add_airwindows_plugin(CrunchyGrooveWear)
add_airwindows_plugin(DeRez)
add_airwindows_plugin(Distance2)
add_airwindows_plugin(Ditherbox)
add_airwindows_plugin(DoublePaul)
add_airwindows_plugin(DrumSlam)
add_airwindows_plugin(ElectroHat)
add_airwindows_plugin(Energy)
add_airwindows_plugin(EQ)
add_airwindows_plugin(Golem)
add_airwindows_plugin(GrooveWear)
add_airwindows_plugin(HardVacuum)
add_airwindows_plugin(HighGlossDither)
add_airwindows_plugin(NaturalizeDither)
add_airwindows_plugin(NodeDither)
add_airwindows_plugin(NonlinearSpace)
add_airwindows_plugin(NotJustAnotherCD)
add_airwindows_plugin(NotJustAnotherDither)
add_airwindows_plugin(OneCornerClip)
add_airwindows_plugin(PaulDither)
add_airwindows_plugin(PDBuss)
add_airwindows_plugin(PDChannel)
add_airwindows_plugin(Pop)
add_airwindows_plugin(PurestConsoleBuss)
add_airwindows_plugin(PurestConsoleChannel)
add_airwindows_plugin(PurestDrive)
add_airwindows_plugin(PurestGain)
add_airwindows_plugin(Righteous4)
add_airwindows_plugin(SingleEndedTriode)
add_airwindows_plugin(Slew)
add_airwindows_plugin(Slew2)
add_airwindows_plugin(SlewOnly)
add_airwindows_plugin(SpatializeDither)
add_airwindows_plugin(Spiral)
add_airwindows_plugin(Spiral2)
add_airwindows_plugin(StereoFX)
add_airwindows_plugin(SubsOnly)
add_airwindows_plugin(TapeDither)
add_airwindows_plugin(TPDFDither)
add_airwindows_plugin(UnBox)
add_airwindows_plugin(VoiceOfTheStarship)
add_airwindows_plugin(VariMu)
add_airwindows_plugin(VinylDither)
add_airwindows_plugin(Wider)
