cmake_minimum_required(VERSION 3.9)
project(airwindows_ports)

set(CMAKE_CXX_STANDARD 14)
add_compile_options(-O2 -D__cdecl=)

include(Helpers.cmake)

add_subdirectory(include/vstsdk)
add_airwindows_plugin(Acceleration)
add_airwindows_plugin(ADClip7)
add_airwindows_plugin(ADT)
add_airwindows_plugin(Air)
add_airwindows_plugin(AQuickVoiceClip)
add_airwindows_plugin(AtmosphereBuss)
add_airwindows_plugin(AtmosphereChannel)
add_airwindows_plugin(Aura)
add_airwindows_plugin(Average)
add_airwindows_plugin(BassDrive)
add_airwindows_plugin(BassKit)
add_airwindows_plugin(Biquad)
add_airwindows_plugin(Bite)
add_airwindows_plugin(BitGlitter)
add_airwindows_plugin(BitShiftGain)
add_airwindows_plugin(BlockParty)
add_airwindows_plugin(BrassRider)
add_airwindows_plugin(BuildATPDF)
add_airwindows_plugin(BussColors4)
add_airwindows_plugin(ButterComp)
add_airwindows_plugin(ButterComp2)
add_airwindows_plugin(C5RawBuss)
add_airwindows_plugin(C5RawChannel)
add_airwindows_plugin(Capacitor)
add_airwindows_plugin(Channel4)
add_airwindows_plugin(Channel5)
add_airwindows_plugin(Channel6)
add_airwindows_plugin(Chorus)
add_airwindows_plugin(ChorusEnsemble)
add_airwindows_plugin(ClipOnly)
add_airwindows_plugin(Cojones)
add_airwindows_plugin(Compresaturator)
add_airwindows_plugin(Console4Buss)
add_airwindows_plugin(Console4Channel)
add_airwindows_plugin(Console5Buss)
add_airwindows_plugin(Console5Channel)
add_airwindows_plugin(Console5DarkCh)
add_airwindows_plugin(Console6Buss)
add_airwindows_plugin(Console6Channel)
add_airwindows_plugin(CrunchyGrooveWear)
add_airwindows_plugin(Crystal)
add_airwindows_plugin(CStrip)
add_airwindows_plugin(curve)
add_airwindows_plugin(DCVoltage)
add_airwindows_plugin(Deckwrecka)
add_airwindows_plugin(DeEss)
add_airwindows_plugin(DeHiss)
add_airwindows_plugin(Density)
add_airwindows_plugin(DeRez)
add_airwindows_plugin(DeRez2)
add_airwindows_plugin(Desk)
add_airwindows_plugin(Desk4)
add_airwindows_plugin(Distance)
add_airwindows_plugin(Distance2)
add_airwindows_plugin(DoublePaul)
add_airwindows_plugin(Ditherbox)
add_airwindows_plugin(DitherFloat)
add_airwindows_plugin(DitherMeDiskers)
add_airwindows_plugin(DitherMeTimbers)
add_airwindows_plugin(Drive)
add_airwindows_plugin(DrumSlam)
add_airwindows_plugin(DubCenter)
add_airwindows_plugin(DubSub)
add_airwindows_plugin(DustBunny)
add_airwindows_plugin(Dyno)
add_airwindows_plugin(EQ)
add_airwindows_plugin(EdIsDim)
add_airwindows_plugin(ElectroHat)
add_airwindows_plugin(Energy)
add_airwindows_plugin(Ensemble)
add_airwindows_plugin(EveryTrim)
add_airwindows_plugin(FathomFive)
add_airwindows_plugin(Floor)
add_airwindows_plugin(Fracture)
add_airwindows_plugin(FromTape)
add_airwindows_plugin(Gatelope)
add_airwindows_plugin(Golem)
add_airwindows_plugin(GrooveWear)
add_airwindows_plugin(GuitarConditioner)
add_airwindows_plugin(HardVacuum)
add_airwindows_plugin(Hermepass)
add_airwindows_plugin(HermeTrim)
add_airwindows_plugin(HighGlossDither)
add_airwindows_plugin(HighImpact)
add_airwindows_plugin(Highpass)
add_airwindows_plugin(Highpass2)
add_airwindows_plugin(Holt)
add_airwindows_plugin(Hombre)
add_airwindows_plugin(IronOxide5)
add_airwindows_plugin(IronOxideClassic)
add_airwindows_plugin(Logical4)
add_airwindows_plugin(Loud)
add_airwindows_plugin(Lowpass)
add_airwindows_plugin(Lowpass2)
add_airwindows_plugin(Melt)
add_airwindows_plugin(MidSide)
add_airwindows_plugin(Mojo)
add_airwindows_plugin(MV)
add_airwindows_plugin(NaturalizeDither)
add_airwindows_plugin(NCSeventeen)
add_airwindows_plugin(NodeDither)
add_airwindows_plugin(Noise)
add_airwindows_plugin(NonlinearSpace)
add_airwindows_plugin(NotJustAnotherCD)
add_airwindows_plugin(NotJustAnotherDither)
add_airwindows_plugin(OneCornerClip)
add_airwindows_plugin(Pafnuty)
add_airwindows_plugin(PaulDither)
add_airwindows_plugin(PDBuss)
add_airwindows_plugin(PDChannel)
add_airwindows_plugin(PhaseNudge)
add_airwindows_plugin(Podcast)
add_airwindows_plugin(PodcastDeluxe)
add_airwindows_plugin(Point)
add_airwindows_plugin(Pop)
add_airwindows_plugin(PowerSag)
add_airwindows_plugin(Pressure4)
add_airwindows_plugin(PurestConsoleBuss)
add_airwindows_plugin(PurestConsoleChannel)
add_airwindows_plugin(PurestDrive)
add_airwindows_plugin(PurestEcho)
add_airwindows_plugin(PurestGain)
add_airwindows_plugin(PurestSquish)
add_airwindows_plugin(PurestWarm)
add_airwindows_plugin(Pyewacket)
add_airwindows_plugin(RawGlitters)
add_airwindows_plugin(RawTimbers)
add_airwindows_plugin(Recurve)
add_airwindows_plugin(Remap)
add_airwindows_plugin(ResEQ)
add_airwindows_plugin(Righteous4)
add_airwindows_plugin(SideDull)
add_airwindows_plugin(Sidepass)
add_airwindows_plugin(SingleEndedTriode)
add_airwindows_plugin(Slew)
add_airwindows_plugin(Slew2)
add_airwindows_plugin(SlewOnly)
add_airwindows_plugin(Smooth)
add_airwindows_plugin(SpatializeDither)
add_airwindows_plugin(Spiral)
add_airwindows_plugin(Spiral2)
add_airwindows_plugin(StarChild)
add_airwindows_plugin(StereoFX)
add_airwindows_plugin(StudioTan)
add_airwindows_plugin(SubsOnly)
add_airwindows_plugin(Surge)
add_airwindows_plugin(SurgeTide)
add_airwindows_plugin(Swell)
add_airwindows_plugin(TapeDelay)
add_airwindows_plugin(TapeDither)
add_airwindows_plugin(TapeDust)
add_airwindows_plugin(TapeFat)
add_airwindows_plugin(Thunder)
add_airwindows_plugin(ToneSlant)
add_airwindows_plugin(ToTape5)
add_airwindows_plugin(ToVinyl4)
add_airwindows_plugin(TPDFDither)
add_airwindows_plugin(TransDesk)
add_airwindows_plugin(Tremolo)
add_airwindows_plugin(TubeDesk)
add_airwindows_plugin(uLawDecode)
add_airwindows_plugin(uLawEncode)
add_airwindows_plugin(UnBox)
add_airwindows_plugin(VariMu)
add_airwindows_plugin(VinylDither)
add_airwindows_plugin(VoiceOfTheStarship)
add_airwindows_plugin(VoiceTrick)
add_airwindows_plugin(Wider)
